# movan-l1j-tw-rust

./: .gitignore  Cargo.toml  README.md
config/: config.toml  server.toml
src/: config.rs  game_context.rs  game_server.rs  l1database.rs  log.rs  main.rs  opcodes.rs
src/game_server/: cipher.rs  client_base_packet.rs  client_connection.rs  client_packets.rs  client_thread.rs  server_base_packet.rs  server_packets.rs
src/game_server/client_packets/: c_auth_login.rs  c_server_version.rs
src/game_server/server_packets/: s_login_result.rs  s_server_version.rs
src/game_server/services/: account_service.rs
src/utils/: hex.rs
